--- a/src/main/resources/static/grade_m1.html
+++ b/src/main/resources/static/grade_m1.html
@@ -22,10 +22,10 @@
 </head>
 
 <body>
-<p>【毕业学分表数据管理 】 </p>
+<p>【课程表数据管理 】 </p>
 <p> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
     <a href="grade_add.html" target="mainFrame12">增加记录</a> |
-    <a href="/updatebyxf021" target="mainFrame12">修改记录</a> |
+    <a href="/editGrade" target="mainFrame12">修改记录</a> |
     <a href="/deletebyxf031" target="mainFrame12">删除记录</a> |
     <a href="byxf04.html" target="mainFrame12">条件查询</a> |
     <a href="/piechartbyxf" target="mainFrame12">毕业学分表数据统计</a>
