--- a/src/main/resources/static/in1.html
+++ b/src/main/resources/static/in1.html
@@ -19,7 +19,7 @@ body {
 
 <body>
 <div align="center">
-  <p>数据库应用课程设计【原型：HanZaiXue1287学分-绩点管理系统】  </p>
+  <p>数据库应用课程设计【原型：Huangshan2345学分-绩点管理系统】  </p>
 </div>
 </body>
 </html>
