--- a/src/main/resources/static/in3.html
+++ b/src/main/resources/static/in3.html
@@ -19,8 +19,8 @@ body {
 
 <body>
 <p>系统简介</p>
-<p>&nbsp;&nbsp;&nbsp; HanZaiXue1287学分-绩点管理系统的功能模块结构如图1所示。</p>
-<p align="center"><img src="images/HanZaiXue1287-1.jpg" alt="HanZaiXue1287系统功能模块" width="560" height="265" /></p>
-<p align="center">图1 HanZaiXue1287学分-绩点管理系统功能模块结构</p>
+<p>&nbsp;&nbsp;&nbsp; Huangshan2345学分-绩点管理系统的功能模块结构如图1所示。</p>
+<p align="center"><img src="images/Huangshan2345-1.jpg" alt="Huangshan2345系统功能模块" width="560" height="265" /></p>
+<p align="center">图1 Huangshan2345学分-绩点管理系统功能模块结构</p>
 </body>
 </html>
