--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -36,7 +36,7 @@
     <tr>
         <td>&nbsp;</td>
         <td>
-            <div align="center">HanZaiXue1287学分-绩点管理系统【用户登录】</div>
+            <div align="center">Huangshan2345学分-绩点管理系统【用户登录】</div>
         </td>
         <td>&nbsp;</td>
     </tr>
