--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -30,7 +30,7 @@ body {
 <table width="779" border="6" align="center">
   <tr>
     <td>&nbsp;</td>
-    <td><div align="center">HanZaiXue1287学分-绩点管理系统【用户注册】</div></td>
+    <td><div align="center">Huangshan2345学分-绩点管理系统【用户注册】</div></td>
     <td>&nbsp;</td>
   </tr>
   <tr>
