--- a/src/main/resources/static/student_m1.html
+++ b/src/main/resources/static/student_m1.html
@@ -27,8 +27,8 @@
     <a href="student_add.html" target="mainFrame12">增加记录</a> |
     <a href="/editStudent" target="mainFrame12">修改记录</a> |
     <a href="/chooseStudent" target="mainFrame12">删除记录</a> |
-    <a href="byxf04.html" target="mainFrame12">条件查询</a> |
-    <a href="/piechartbyxf" target="mainFrame12">毕业学分表数据统计</a>
+    <a href="studentSearch.html" target="mainFrame12">条件查询</a> |
+    <a href="/searchStudent" target="mainFrame12">毕业学分表数据统计</a>
 <hr/>
 </p>
 </body>
