#整理进入管理系统首页

--- a/src/main/resources/static/in4.html
+++ b/src/main/resources/static/in4.html
@@ -32,7 +32,7 @@
     <p><a href="student.html" target="mainFrame" class="STYLE1">学生表</a></p>
     <p><a href="lesson.html" target="mainFrame" class="STYLE1">课程表</a></p>
     <p><a href="grade.html" target="mainFrame" class="STYLE1">学习成绩表</a></p>
-    <p><a href="/index" target="_parent" class="STYLE1">返回【主控台</a>】</p>
+    <p><a href="/" target="_parent" class="STYLE1">返回【主控台</a>】</p>
 </div>
 </body>
 </html>
