--- a/src/main/resources/static/credit.html
+++ b/src/main/resources/static/credit.html
@@ -6,7 +6,7 @@
 </head>
 <frameset rows="150,*" cols="*" framespacing="0" frameborder="no" border="0">
     <frame src="m1.html" name="topFrame" scrolling="No" noresize="noresize" id="topFrame" title="topFrame"/>
-    <frame src="m2.html" name="mainFrame12" id="mainFrame12" title="mainFrame"/>
+    <frame src="/updatebyxf021" name="mainFrame12" id="mainFrame12" title="mainFrame"/>
 </frameset>
 <noframes>
     <body>
