--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -1,59 +1,70 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>Œﬁ±ÍÃ‚Œƒµµ</title>
-<style type="text/css">
-<!--
-body,td,th {
-	font-family: ∫⁄ÃÂ;
-	font-size: 24px;
-	color: #000000;
-	font-weight: bold;
-}
-body {
-	background-color: #FFFFFF;
-}
-#Layer1 {
-	position:absolute;
-	left:126px;
-	top:108px;
-	width:376px;
-	height:127px;
-	z-index:1;
-}
--->
-</style></head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>Êó†Ê†áÈ¢òÊñáÊ°£</title>
+    <style type="text/css">
+        <!--
+        body, td, th {
+            font-family: Èªë‰Ωì;
+            font-size: 24px;
+            color: #000000;
+            font-weight: bold;
+        }
+
+        body {
+            background-color: #FFFFFF;
+        }
+
+        #Layer1 {
+            position: absolute;
+            left: 126px;
+            top: 108px;
+            width: 376px;
+            height: 127px;
+            z-index: 1;
+        }
+
+        -->
+    </style>
+</head>
 
 <body>
 <p>&nbsp;</p>
 <table width="779" border="6" align="center">
-  <tr>
-    <td>&nbsp;</td>
-    <td><div align="center">Huangshan2345—ß∑÷-º®µ„π‹¿ÌœµÕ≥°æ”√ªß◊¢≤·°ø</div></td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td><form id="form1" name="form1" method="post" action="register.jsp">
-      <p align="center">—ß∫≈£∫
-        <label>
-          <input name="t1" type="text" id="t1" size="20" style="font-size:24px" />
-          </label>
-      </p>
-      <p align="center">√‹¬Î£∫
-        <input name="t2" type="password" id="t2" size="20" style="font-size:24px" />
-      </p>
-      <p>
-        <label>
-        <div align="center">
-          <div align="center">
-            <input type="submit" name="Submit" value="Ã·Ωª◊¢≤· ˝æ›" style="font-size:24px" />
-        </div>
-        </label>
-    </form></td>
-    <td>&nbsp;</td>
-  </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>
+            <div align="center">Huangshan2345Â≠¶ÂàÜ-Áª©ÁÇπÁÆ°ÁêÜÁ≥ªÁªü„ÄêÁî®Êà∑Ê≥®ÂÜå„Äë</div>
+        </td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>
+            <form id="form1" name="form1" method="post" action="/register">
+                <p align="center">Â≠¶Âè∑Ôºö
+                    <label>
+                        <input name="number" type="text" id="t1" size="20" style="font-size:24px"/>
+                    </label>
+                </p>
+                <p align="center">ÂØÜÁ†ÅÔºö
+                    <input name="password" type="password" id="t2" size="20" style="font-size:24px"/>
+                </p>
+                <p>
+                    <label>
+                        <div align="center">
+                            <div align="center">
+                                <input type="submit" name="Submit" value="Êèê‰∫§Ê≥®ÂÜåÊï∞ÊçÆ" style="font-size:24px"/>
+                            </div>
+                        </div>
+                    </label>
+                </p>
+            </form>
+        </td>
+        <td>&nbsp;</td>
+    </tr>
 </table>
 </body>
 </html>
