#修改springboot版本1.4.2以下才可以jsp用jar正常路径 并且修改bug

--- a/src/main/resources/static/student_m1.html
+++ b/src/main/resources/static/student_m1.html
@@ -23,12 +23,12 @@
 
 <body>
 <p>【学生表数据管理 】 </p>
-<p> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+<p> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;|
     <a href="student_add.html" target="mainFrame12">增加记录</a> |
     <a href="/editStudent" target="mainFrame12">修改记录</a> |
     <a href="/chooseStudent" target="mainFrame12">删除记录</a> |
     <a href="studentSearch.html" target="mainFrame12">条件查询</a> |
-    <a href="/searchStudent" target="mainFrame12">毕业学分表数据统计</a>
+
 <hr/>
 </p>
 </body>
