--- a/src/main/resources/static/m1.html
+++ b/src/main/resources/static/m1.html
@@ -24,10 +24,10 @@
 <body>
 <p>【毕业学分表数据管理 】 </p>
 <p> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
-    <a href="byxf01.html" target="mainFrame12">增加记录</a> |
+    <a href="plan_add.html" target="mainFrame12">增加记录</a> |
     <a href="/updatebyxf021" target="mainFrame12">修改记录</a> |
     <a href="/deletebyxf031" target="mainFrame12">删除记录</a> |
-    <a href="byxf04.html" target="mainFrame12">条件查询</a> |
+    <a href="planSearch.html" target="mainFrame12">条件查询</a> |
     <a href="/piechartbyxf" target="mainFrame12">毕业学分表数据统计</a>
 <hr/>
 </p>
