#账号维护功能完成

--- a/src/main/resources/static/in2.html
+++ b/src/main/resources/static/in2.html
@@ -22,9 +22,9 @@ body {
 <div align="center">
   <p>【系统-主控台】</p>
   <p><a href="in3.html" target="mainFrame" class="STYLE1">系统简介</a></p>
-  <p><a href="register.html" target="mainFrame" class="STYLE1">用户注册</a></p>
-  <p><a href="login.html" target="mainFrame" class="STYLE1">登录系统</a></p>
-  <p><a href="updatereg.jsp" target="mainFrame" class="STYLE1">账号维护</a></p>
+  <p><a href="registerPage.html" target="mainFrame" class="STYLE1">用户注册</a></p>
+  <p><a href="loginPage.html" target="mainFrame" class="STYLE1">登录系统</a></p>
+  <p><a href="/account" target="mainFrame" class="STYLE1">账号维护</a></p>
   <p class="STYLE1" onclick="parent.close();">退出系统</p>
 </div>
 </body>
