--- a/src/main/resources/static/loginPage.html
+++ b/src/main/resources/static/loginPage.html
@@ -57,7 +57,7 @@
                         <div align="center">
                             <div align="center">
                                 <input type="submit" name="Submit" value="登录系统" style="font-size:24px"/>
-                                &nbsp; <a href="register.html">先注册</a></div>
+                                &nbsp; <a href="registerPage.html">先注册</a></div>
                         </div>
                     </label>
             </form>
